# jingongo

./: .gitignore  README.md  pyproject.toml  repo_struct.md
examples/: 00_check_health.py  01_generate_api_key.py  02_convert_python_model.py  03_convert_c_model.py  04_list_models.py  05_download_model.py  06_get_login_url.py  07_get_signup_url.py
examples/example_models/c_identity_block_model/: .jingongo.yml  model.c  model.def  model.h
examples/example_models/python_identity_block_model/: .jingongo.yml  model.py
src/jingongo/: __init__.py  jingongo.py
tests/: test_auth.py
